made edits to the submission

--- a/JS3/HeeHawRecur.html
+++ b/JS3/HeeHawRecur.html
@@ -8,22 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-<form action="HeeHawRecur.php" method="post">
+<form id="HHform" action="HeeHawRecur.html" method="post">
     <input type="text" name="input" id="input">
 
     <button type="submit" class="btn btn-primary">print</button>
 </form>
-
-<?php
-    if(!($_POST['input']) == ""){
-        if(is_numeric($_POST['input'])){
-            HeeHawRecur($_POST['input']);
-        }
-        else{
-            echo("Please enter a numeric value");
-        }
-    }
-?>
 
 </body>
 <script src="HHRecur.js"></script>
