--- a/JS4/json-search.html
+++ b/JS4/json-search.html
@@ -8,14 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Enter a name to search for</h1>
-    <form action="#" id="search" method="post">
-        <label for="name"></label>
-        <input type="text" id="name" name="name">
-        <button type="submit">Submit</button>
-    </form>
+    <h1>Enter a name to search for</h1>
+    <label for="name"></label>
+    <input type="text" id="name" name="name">
+    <button type="button" onclick="search()">Submit</button>
 
     <p id="result"></p>
 
 </body>
+<script src="json-search.js"></script>
 </html>
